Structuring intro/conclusions.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -9,13 +9,60 @@
 
 \label{introduction}
 
-%\begin{itemize}
-%	\item \textbf{Content -} Short (10 pages is probably far too much). High level introduction to the concepts/topics involved in the thesis, very short/broad definitions of any terms introduced in the title (eg `simultaneous presence'), overview of the rest of the document, list of contributions/donations of this document
-%	\item \textbf{What has been done -} Nothing.
-%	\item \textbf{What is left to do/how long should it take -} Should be one of the last things to be written, maybe a few days of writing.
-%\end{itemize}
+%=========================================================================================================
 
-%\hrule
+Intro/italic example
+
+section - parallel reality, defined as...
+
+document overview
+
+contributions
+
+research domains
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+PICTURE FROM EXPERIMENTS
+
+
+
+
+
+
+
+
+
+
+
+
+
+%=========================================================================================================
+%=========================================================================================================
+
+Extended example goes here at the beginning.
+
+%=========================================================================================================
+
+
 
 Talk about history of alternate realities, talk about the disappointment of VR in the 90's \& it's resurgence now thank to Oculus, etc.
 
@@ -60,3 +107,7 @@ Caroline A. James speaking on the work of Janet Cardiff \& George Bures Miller
 
 
 \textit{``Sight plays such a prominent part in the mental life that the field of vision is sometimes considered almost synonymous with the field of attention.''}~\cite{Lucas1951}
+
+%=========================================================================================================
+
+Structure of thesis here
