--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -18,11 +18,9 @@
 
 %\section{Introduction}
 
-The subject of this thesis is the design, development \& evaluation of a platform that allows its user to observe \& move around their real environment whilst also being able to view an alternative virtual environment from the equivalent vantage point. This combination of real \& virtual environments, combined with maintained user mobility, is not well encapsulated by any previously defined alternate reality terminology. It is therefore necessary to explore this terminology in order to correctly frame this new system in relation to them.
+The subject of this thesis is a new category of alternate reality that allows its user to observe \& move around their real environment whilst also being able to view a complete alternative virtual environment from the equivalent vantage point. This combination of real \& virtual environments, combined with maintained user mobility, is not fully encapsulated by any previously defined alternate reality terminology. It is therefore necessary to explore this terminology in order to correctly frame this new system in relation to them. The closest existing category is that of the `cross reality' paradigm; a cross reality system holds the distinction of two discrete environments, one real \& one virtual, both complete unto themselves, however cross reality focusses on a bidirectional exchange of information between the environments \& not upon user mobility \& tandem visual engagement with both environments.
 
-The closest existing label is the `cross reality' paradigm; a cross reality system holds the distinction of two discrete environments, one real \& one virtual, both complete unto themselves, however cross reality further focusses on a bidirectional exchange of information between the environments \& not upon user mobility \& tandem visual exploration of both environments.
-
-The term `parallel reality' is proposed to refer to systems such as that developed in this thesis, which combine complete real \& virtual environments together in a manner that allows mobile exploration of them both in tandem, relating it \& positioning it against previously explored alternate reality terminology.
+The new category of `parallel reality' is thus proposed to describe systems that combine complete real \& virtual environments together in a manner that allows mobile exploration of them both in tandem, relating it \& positioning it against previously explored alternate reality terminology.
 
 %This research centres around the design, development \& evaluation of a hardware \& software platform which allows its user to observe \& move around their Real World (RW) environment whilst wearing a wide field of view (FOV), stereoscopic 3D, Head Mounted Display (HMD) which allows them to alternatively view an immersive Virtual Reality (VR) environment from the equivalent vantage point. This is achieved by combining a head-tracked HMD, webcams, an indoor positioning system (IPS) \& a 3D game engine, into a mobile \textit{cross reality} (XR) interface.
 
@@ -262,7 +260,7 @@ HR is an abstract, high level term that refers to a category of mixed reality en
 
 \subsection{PolySocial Reality}
 
-PolySocial Reality (PoSR) describes situations in which people multiplex their physical reality, where they engage in face-to-face social interaction, with Web-based social networks \& apps for Internet mediated social interaction. Instead of defining a new type of alternate reality in terms of the provenance of the audiovisual stimuli received by a subject, PoSR is concerned with the provenance of the multiple, simultaneous social interactions that are mediated through various telecommunications media~\cite{Applin2012}. It has been shown that \textit{``effective interaction among participants is a contributing factor to presence''}~\cite{Terashima2001}, so it should not come as much surprise to observe people maintain PolySocial interactions between their real environment \& a virtual one, as the opening quote to chapter \ref{introduction} from Waterworth \& Waterworth posits will be the case.
+PolySocial Reality (PoSR) describes situations in which people multiplex their physical reality, where they engage in face-to-face social interaction, with Web-based social networks \& apps for Internet mediated social interaction. Instead of defining a new type of alternate reality in terms of the provenance of the audiovisual stimuli received by a subject, PoSR is more concerned with the provenance of the multiple, simultaneous social interactions that are mediated through various telecommunications media~\cite{Applin2012}. It has been shown that \textit{``effective interaction among participants is a contributing factor to presence''}~\cite{Terashima2001}, so it should not come as much surprise to observe people maintain PolySocial interactions between their real environment \& a virtual one, as the opening quote to chapter \ref{introduction} from Waterworth \& Waterworth posits will be the case.
 
 \textbf{*** Mention place vs non-place?}
 
@@ -393,7 +391,7 @@ Although a XR system as a whole should definitely be considered a case of MR, wh
 
 %However, XR systems that allow simultaneous interaction with both of their constituent environments blur this definition; using a XR platform such as that discussed in this document, a user can transition between perceiving stimuli from each of these environments (figures \ref{virtuality-continuum-cross-reality-2} \& \ref{virtuality-continuum-cross-reality-3}) in a manner that allows them to engage with each environment without becoming wholly vacant from the other.
 
-A further distinction between AR \& XR is made by considering Steed's primary environment concept. For an AR system the primary environment is necessarily real, as AR describes systems in which virtual objects are superimposed upon a view (a background) of a real environment. However for an XR system one could argue that the primary environment is either real or virtual, depending upon how the user interacts with the system. For the user that walks through the RW environment of an XR system \& views their unmediated surroundings (including actuations trigger by events within the VR environment), one would intuitively posit that their primary environment is real. But for the user that sits in front of a computer monitor \& uses an avatar to walk through the VR environment of the same XR system \& views the avatar's VR surroundings (including visualisations of sensor data collected from the RW environment), one would posit that their primary environment is virtual.
+A further distinction between AR \& XR is made by considering Steed's primary environment concept. For an AR system the primary environment is necessarily real, as AR describes systems in which virtual objects are superimposed upon a view (a background) of a real environment. However for an XR system one could argue that the primary environment is either real or virtual, depending upon how the user interacts with the system. For the user that walks through the RW environment of an XR system \& views their unmediated surroundings (including actuations trigger by events within the VR environment), one would intuitively posit that their primary environment is real. But for the user that sits in front of a computer monitor \& uses an avatar to walk through the VR environment of the same XR system \& views the avatar's VR surroundings (including visualisations of sensor data collected from the RW environment), one would posit that their primary environment is virtual. Considering figures \ref{virtuality-continuum-cross-reality-2} \& \ref{virtuality-continuum-cross-reality-3} again, one could say that the dashed ellipses thus represent the primary environment.
 
 \begin{figure}[h]
 	\begin{center}
@@ -472,24 +470,26 @@ One may also wish to consider this distinction in relation to the different stag
 
 However one treats virtual space, a PR system would be unrewarding if the real \& virtual environments were identical\turklevrfootnote{}. However a virtual environment that shares roughly the same fundamental dimensions \& layout as the real environment (representing the same `place') but presents an \textit{alternative} representation has been proven to be a useful modality in previous XR research (see section \ref{sec_crossreality}) \& it is this arrangement that the system developed in this thesis focuses on, in particular those where the virtual environment represents the same place as the real environment but at an earlier moment in time.
 
-One might consider the `Second Earth' concept to be the ultimate realisation of this scenario of spatially equivalent real and virtual environments. The combination of virtual world technology (as in Second Life) with `mirror world' technology (as in Google Earth), Second Earth theorises a virtual simulation/reconstruction of the entire physical world, such that for any location in the real world there is a corresponding location in the virtual world~\cite{Roush2007}. The system developed in this thesis focuses on a single small location, however it does not take a leap of imagination to understand the worth of such a system scaled to larger, even global, sizes.
+One might consider the `Second Earth' concept to be the ultimate realisation of this scenario of spatially equivalent real and virtual environments. The combination of virtual world technology (as in Second Life) with `mirror world' technology (as in Google Earth), Second Earth theorises a virtual simulation/reconstruction of the entire physical world, such that for any location in the real world there is a corresponding location in the virtual world~\cite{Roush2007}. The system developed in this thesis focuses on a single small location, however it does not take a great leap of imagination to comprehend the worth of such a system scaled to larger, even global, sizes.
 
 Although the use cases for PR systems that feature completely unrelated real \& virtual environments (including where the virtual environment is entirely fictitious) may seem limited in terms of possible benefits to understanding or knowledge gain when comparing \& contrasting the environments, an educated approach to implementing transitions between these environments, that takes similar considerations as the system developed in this thesis, does conceivably have a purpose.
 
 In the opening quote to this chapter, taken from Neal Stephenson's cyberpunk novel \textit{Snow Crash}, the protagonist enquires about the location of another character, called Y.T., both in the real world and in the `Metaverse'. For the sake of this discussion, the Metaverse can be considered analogous to a virtual world akin to Second Life, accessed via a head mounted display, and comprises an entirely synthetic virtual world whose locations have no counterparts in the real world. Y.T.'s response is that \textit{``In  the Metaverse, I'm on a plusbound monorail train. Just passed by Port 35.''} whilst in reality she is at a \textit{``Public terminal across the street from a Reverend Wayne's"}.
 
-In this scenario there is no spatial equivalence between the real environment and the virtual environment - they are not the same `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. While this situation is currently science fiction, recent developments in mobile VR platforms such as Samsumg Gear VR hint that we are not so far away from a time in which members of the general public will wish to multiplex their real environment with a virtual one while in public, in the same way that people commonly engage in computer-mediated communication (CMC) via their smartphones at the same time as walking through real environments \& conversing with the people in them, in instantiations of PoSR. With the majority of players of popular Massively Multiplayer Online games (MMOs) wishing they could spend more time playing, over a fifth even wanting to spend all of their time in game~\cite{Castronova2006}, and with social roles and the community aspect constituting key aspects of these game's popularity~\cite{Castronova2006, Bartle2004}, informing the implementation of transitions between real \& virtual in such systems with the findings of the experiments in this thesis into spatially equivalent PR systems promises to be beneficial to the further development of 3D social CMC.
+In this scenario there is no spatial equivalence between the real environment and the virtual environment - they are not the same `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. While this situation is currently science fiction, recent developments in mobile VR platforms such as Samsumg Gear VR\footnote{\url{http://www.samsung.com/global/microsite/gearvr/}} hint that we are not so far away from a time in which members of the general public will wish to multiplex their real environment with a virtual one while in public, in the same way that people commonly engage in computer-mediated communication (CMC) via their smartphones at the same time as walking through real environments \& conversing with the people in them, in instantiations of PoSR. With the majority of players of popular Massively Multiplayer Online games (MMOs) wishing they could spend more time playing, over a fifth even wanting to spend all of their time in game~\cite{Castronova2006}, and with social roles and the community aspect constituting key aspects of these game's popularity~\cite{Castronova2006, Bartle2004}, informing the implementation of transitions between real \& virtual in such systems with the findings of the experiments in this thesis into spatially equivalent PR systems promises to be beneficial to the further development of 3D social CMC.
 
 %=========================================================================================================
 
-%\subsection{PolySocial Reality in Parallel Reality}
+\subsection{PolySocial Encounters Parallel Reality}
+
+If a PR system were to allow interaction between its user \& other virtual environment users who are not part of the PR scenario, it is conceivable that PolySocial instances would arise, with PR users socially engaging both with people in their immediate RW environment \& with people in their immediate VR environment, even where the latter are not present in the RW environment. This situation would present \textit{``\ldots\ instances of synchronous PoSR, multiple presence \ldots\ being activated in different environments.''}\footnote{Personal correspondence with Sally Applin, PoSR author.}
 
 %=========================================================================================================
 
 \section{Summary of Additional Alternate Reality Definitions}
 \label{summaryofadditionalalternaterealitydefinitions}
 
-\begin{table}
+\begin{table}[h]
 \begin{center}
 \begin{tabularx}{\textwidth}{l *{2}{>{\centering\arraybackslash}X}}
 
@@ -611,8 +611,8 @@ Furthermore, the notion of experience of presence as changing continually from m
 
 However, no matter how smooth the transitions, the process is expected to nonetheless result in some heightened cognitive load, a temporary \textit{break in presence}\breakinpresencefootnote{} (BIP), as the user comes to terms with the new environment presented to them \& comprehends its relation to the other environment that they were just perceiving. Transitions can be implemented in multiple different manners \& it is expected that users will prefer different implementations in different situations, surroundings \& scenarios (where `preference' toward a particular implementation is expected to correlate with a less severe BIP being experienced upon its execution). To this end, several different implementations are effected \& investigated to identify \& quantify preferences toward them, to infer which approaches to transitioning between RW \& VR visual stimuli are more or less appropriate for the different situations that arise where a platform like that developed in this thesis may be deployed (moving, stationary, etc.).
 
-\subsection{Transitions using the Combined Model}
-Visualised using the combined model (figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}) these transitions are an oscillation along the locus axis, between a RW environment at one position \& a VR environment at the other.
+\subsection{Transitions using the Combined Milgram/Waterworth Model}
+Visualised using the combined Milgram/Waterworth model (figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}) these transitions are an oscillation along the locus axis, between a RW environment at one position \& a VR environment at the other.
 
 Heightened cognitive load required to comprehend a transition is a temporary movement upon the focus axis from presence toward absence (a BIP). With the ability of a wide FOV, stereoscopic 3D, head-tracked HMD (such as that used by the system developed in this thesis) to produce immersive VR visual stimuli that require fairly limited cognitive processing \& our inherent ability to engage with our RW surroundings without significant cognitive load, focus is expected to be high (toward the presence extremum) when attending to stimuli from either RW or VR.
 
@@ -626,7 +626,7 @@ Sensus is expected to be largely task dependent, however when performing a task 
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=.8\textwidth]{transition-rw-vr.png}
-		\caption{Operation of a PR system represented upon the combined model.}
+		\caption{Operation of a PR system represented upon the combined Milgram/Waterworth model.}
 		\label{focus-locus-sensus-with-virtuality-continuum-with-transition}
 	\end{center}	
 \end{figure}
@@ -721,7 +721,7 @@ Thus, a PR platform is well suited to situations in which interaction with the v
 %=========================================================================================================
 
 \section{Summary}
-Decades of research into alternate realities has furnished us with a rich continuum of approaches \& technologies for creating, combining, augmenting \& diminishing real \& virtual environments. Many of the alternate reality labels that are now becoming commonplace are concerned with presenting a different environment to the user's real surroundings (as in telepresence \& virtual reality) or mixing additional information into the user's view of their real or virtual surroundings (as in augmented/diminished reality \& augmented virtuality).
+Decades of research into alternate realities has furnished us with a rich continuum of approaches \& technologies for creating, combining, augmenting \& diminishing real \& virtual environments. Many of the alternate reality labels that are now becoming commonplace are concerned with presenting a different environment to the user's real surroundings (as in telepresence \& virtual reality) or mixing additional information into the user's view of their real or virtual surroundings (as in augmented reality \& augmented virtuality).
 
 Although less thoroughly investigated, the concept of creating an alternate reality system by combining two environments, one real \& the other virtual \& both complete unto themselves, into a cross reality system presents an interesting avenue for furthering alternate reality techniques \& applications, in particular to addressing the vacancy problem that affects users when trying to distribute their attention between two environments.
 
