--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -62,7 +62,7 @@ As the different views that a user of the Mirrorshades platform switches between
 
 \subsection{St Salvator's Chapel}
 
-The stage upon which the Mirrorshades platform was designed \& developed to perform upon was St Salvator's chapel in St Andrews. Founded in 1450 but internally stripped of its medieval fittings during the Protestant Reformation (1517 - 1648), the chapel looks markedly different in the present day than it did upon its completion. An existing VR reconstruction of the chapel as it stood in the period 1450-1460 \& the marked differences between the internal appearance of the VR building \& the current building (including the replacement of the original stone roof with a wooden one \& drastically different dividing of the internal space) make this chapel an ideal candidate within the context of cultural heritage for the Mirrorshades PR system to be deployed.
+The stage upon which the Mirrorshades platform was designed \& developed to perform upon was St Salvator's chapel in St Andrews. Founded in 1450 but internally stripped of its medieval fittings during the Protestant Reformation (1517 - 1648), the chapel looks markedly different in the present day than it did upon its completion. An existing VR reconstruction of the chapel as it stood in the period 1450-1460 \& the marked differences between the internal appearance of the VR building \& the current building (including the replacement of the original stone roof with a wooden one \& drastically different dividing of the internal space) make this chapel an ideal candidate within the context of cultural heritage for the Mirrorshades PR system to be deployed. The magnitude of the changes between the chapel's original state \& how it stands today means that AR would not in fact be able to present a faithful image of how the chapel originally looked, but would need to be combined with substantial application of diminished reality\footnote{Where \textit{augmented reality} is the \textit{addition} of information to a RW scene, \textit{diminished reality} in this sense is the \textit{removal} of parts of a RW scene.~\cite{Mann2002}} to remove present day features that were not there in the past.
 
 \TwoFig{sallies-vrst/sallies-quad-real.jpg}{St Salvator's chapel, present day.}{sallies-quad-real.jpg}
        {sallies-vrst/sallies-quad-virtual.png}{St Salvator's chapel, reconstruction.}{sallies-quad-virtual.png}
@@ -548,7 +548,7 @@ Thanks to the ability of the Unity engine to build applications for myriad platf
 \section{Informing Transitions Between RW \& VR}
 Attending to visual stimuli from the RW environment via the cameras is required for the user to safely move around. Delay in IndoorAtlas reporting their position \& inaccuracies in these position data mean that moving around while attending only to visual stimuli from the VR environment would not be safe for the user, even with unchanging RW obstacles with perfectly accurate representations in the VR environment (an unlikely scenario considering a cultural heritage scenario, in which it is extremely likely that many RW obstacles will not have equivalent VR representations). Whilst one can walk through a virtual wall, the same is not true of a real one! Thus the `default' view through the DK1 must display enough of the view through the cameras for the user to safely navigate their environment, including any obstacles within it (whether these are static objects such as walls \& furniture, or dynamic objects such as other humans). For the user to alternatively view through the DK1 a scene that is more, or completely, virtual, thus requires a transition to be performed in which the visual stimuli presented to the user via the DK1 are changed from the default view to the new view.
 
-As discussed in section \ref{transitions_in_parallel_reality}, when a user experiences such a transition from viewing the visual stimuli of one environment (or combination of environments) to viewing the visual stimuli from another environment (or different combination of environments), this will have an effect upon their sense of presence - a break in presence, defined in this context as a deflection along the focus axis of the combined model (see figure \ref{focus-locus-sensus-with-virtuality-continuum}) from presence \& toward absence.
+As discussed in section \ref{transitions_in_parallel_reality}, when a user experiences such a transition from viewing the visual stimuli of one environment (or combination of environments) to viewing the visual stimuli from another environment (or different combination of environments), this will have an effect upon their sense of presence - a break in presence, defined in this context as a deflection along the focus axis of the combined Milgram/Waterworth model (see figure \ref{focus-locus-sensus-with-virtuality-continuum}) from presence \& toward absence.
 
 These breaks are undesirable, as they stand to make the act of performing a transition between two environments (or combinations of environments) unpleasant, to detract from the fundamental purpose of allowing the user to transition between environments \& could even act to deter users from triggering these transitions when they wish to. Thus, implementing these transitions in a manner that minimises the severity of the breaks is integral to the realisation of an enjoyable \& useful mobile PR platform for use in cultural heritage.
 
@@ -596,7 +596,7 @@ Four different styles of transition were implemented for the Mirrorshades platfo
 
 \subsection{Hard switch}
 \label{sub-hardswitch}
-The user presses \& holds the \texttt{[A]} button on the controller to switch the visual stimuli displayed by the DK1 from the default to VR. When the \texttt{[A]} button is released, the visual stimuli displayed by the DK1 switch back from VR to the default. This is a `hard' or `immediate' switch with no fading or transition effect. Figure \ref{scenario1} illustrates this scenario while figure \ref{transition-rw-vr-hard.png}, discussed in the previous section, alludes to the user's experience of this transition upon the combined model (assuming a default environment that is wholly RW).
+The user presses \& holds the \texttt{[A]} button on the controller to switch the visual stimuli displayed by the DK1 from the default to VR. When the \texttt{[A]} button is released, the visual stimuli displayed by the DK1 switch back from VR to the default. This is a `hard' or `immediate' switch with no fading or transition effect. Figure \ref{scenario1} illustrates this scenario while figure \ref{transition-rw-vr-hard.png}, discussed in the previous section, alludes to the user's experience of this transition upon the combined Milgram/Waterworth model (assuming a default environment that is wholly RW).
 
 \begin{figure}[h]
 	\begin{center}
@@ -614,7 +614,7 @@ The user presses \& holds the \texttt{[A]} button on the controller to switch th
 
 \subsection{Transition with linear interpolation}
 \label{transition-with-linear-interpolation}
-The user presses \& holds the \texttt{[B]} button on the controller to switch the visual stimuli displayed by the DK1 from the default to VR. When the \texttt{[B]} button is released, the visual stimuli displayed by the HMD switch back from VR to the default. This switch fades between the default \& VR  visual stimuli using linear interpolation on the opacity of the game objects that the webcam feeds are rendered upon. Figure \ref{scenario12} illustrates this scenario while figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}, discussed in the previous section, alludes to the user's experience of this transition upon the combined model (assuming a default environment that is wholly RW).
+The user presses \& holds the \texttt{[B]} button on the controller to switch the visual stimuli displayed by the DK1 from the default to VR. When the \texttt{[B]} button is released, the visual stimuli displayed by the HMD switch back from VR to the default. This switch fades between the default \& VR  visual stimuli using linear interpolation on the opacity of the game objects that the webcam feeds are rendered upon. Figure \ref{scenario12} illustrates this scenario while figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}, discussed in the previous section, alludes to the user's experience of this transition upon the combined Milgram/Waterworth model (assuming a default environment that is wholly RW).
 
 \begin{figure}[h]
 	\begin{center}
@@ -630,7 +630,7 @@ The user presses \& holds the \texttt{[B]} button on the controller to switch th
 \label{analogue-selectable-opacity}
 The user pulls the right analogue trigger (\texttt{[RT]}) on the controller, where the position of the trigger maps directly to the opacity of the game objects that the camera feeds are rendered upon. The user can choose to stop at any intermediary position that suits their needs, keeping the level of opacity of the camera feeds at that position, as well as controlling the rate at which the visual stimuli from the default environment fade (by changing how quickly they change their depression of the trigger). Pulling the trigger all the way in displays only visual stimuli from the VR environment, while releasing it completely displays only visual stimuli from the default environment. The number of intermediary positions is limited only by the resolution of the trigger \& the encoding of the value.
 
-This method allows the user to superimpose VR visual stimuli upon default visual stimuli at any level that they wish. This is similar, but not identical, to AR, as instead of displaying a small number of virtual objects upon the user's view of their RW environment, a complete VR environment is superimposed upon the user's view of their RW environment. Figure \ref{scenario2} illustrates this scenario, while considering the combined model this method in essence allows the user to control the severity of the deflection upon the focus axis by altering the speed at which the oscillation upon the focus axis is performed to suit their disposition, the current environmental conditions, the task at hand, etc..
+This method allows the user to superimpose VR visual stimuli upon default visual stimuli at any level that they wish. This is similar, but not identical, to AR, as instead of displaying a small number of virtual objects upon the user's view of their RW environment, a complete VR environment is superimposed upon the user's view of their RW environment. Figure \ref{scenario2} illustrates this scenario, while considering the combined Milgram/Waterworth model this method in essence allows the user to control the severity of the deflection upon the focus axis by altering the speed at which the oscillation upon the focus axis is performed to suit their disposition, the current environmental conditions, the task at hand, etc..
 
 \begin{figure}[h]
 	\begin{center}
@@ -658,13 +658,13 @@ Independent or in addition to any of the previous scenarios, the visual stimuli 
 	\end{center}
 \end{figure}
 
-Considering the combined model the periodic glimpses of the VR environment are expected to lessen the deflection upon the focus axis when performing a transition, in a similar manner as to how changing the default environment from wholly RW to a RW/VR mix achieves the same (see figure \ref{transition-mix-vr.png}), however without necessarily causing the associated increase in sensus \& decrease in focus when viewing the default environment.
+Considering the combined Milgram/Waterworth model the periodic glimpses of the VR environment are expected to lessen the deflection upon the focus axis when performing a transition, in a similar manner as to how changing the default environment from wholly RW to a RW/VR mix achieves the same (see figure \ref{transition-mix-vr.png}), however without necessarily causing the associated increase in sensus \& decrease in focus when viewing the default environment.
 
 %=========================================================================================================
 
 \subsection{Reduced maximum opacity}
 \label{subsub-baseopacity}
-Independent or in addition to any of the previous scenarios, the maximum opacity of the game objects that the webcam feeds are rendered upon is reduced, such that the default position at which a transition has not been triggered (either by a button press, trigger movement or by a periodic switch) displays a mix of VR superimposed upon RW. Figure \ref{scenariobaseopacity} illustrates this scenario in combination with a hard switch (from section \ref{sub-hardswitch}) in which the user triggers hard switches between the default position of a superimposition of VR upon RW \& a position where only VR stimuli are present, while figure \ref{transition-mix-vr.png} shows this concept upon the combined model when combined with a linear interpolated transition.
+Independent or in addition to any of the previous scenarios, the maximum opacity of the game objects that the webcam feeds are rendered upon is reduced, such that the default position at which a transition has not been triggered (either by a button press, trigger movement or by a periodic switch) displays a mix of VR superimposed upon RW. Figure \ref{scenariobaseopacity} illustrates this scenario in combination with a hard switch (from section \ref{sub-hardswitch}) in which the user triggers hard switches between the default position of a superimposition of VR upon RW \& a position where only VR stimuli are present, while figure \ref{transition-mix-vr.png} shows this concept upon the combined Milgram/Waterworth model when combined with a linear interpolated transition.
 
 \begin{figure}[h]
 	\begin{center}
