--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -7,6 +7,53 @@
 
 %=========================================================================================================
 
+Introduction goes here.
+
+%=========================================================================================================
+
+Contributions (as laid out in intro, but elaborate? or maybe have them in their entirety in both places)
+
+%=========================================================================================================
+
+Future work
+
+%=========================================================================================================
+
+Final Thoughts
+
+final quote?
+
+%=========================================================================================================
+
+
+
+
+
+
+
+
+
+
+
+
+
+%=========================================================================================================
+
+\section{Summary}
+
+
+\begin{itemize}
+	\item 
+	\item 
+	\item 
+	\item 
+	\item 
+	\item 
+	\item 
+	\item 
+	\item 
+	\item 
+\end{itemize}
 
 
 \section{PR Best Practices}
@@ -21,5 +68,6 @@
 
 
 
+\section{Future Work}
 
-
+Gear VR style hardware
