--- a/thesis.tex
+++ b/thesis.tex
@@ -59,7 +59,7 @@
 %for toprule/midrule/bottomrule in tabularx environment
 \usepackage{booktabs}
 
-%allows reuse of a footnote via \saveFN\foo\ followed by \useFN\foo\
+%allows reuse of a footnote via \saveFN\foo followed by \useFN\foo
 \usepackage{savefnmark}
 
 \let\oldFootnote\footnote
