--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -65,7 +65,7 @@ The scenarios were intended to mimic the style of exploration \& interaction tha
 
 In the traditional VR scenario participants interacted with the VR chapel using the DK1 \& Xbox controller while seated. After completing the path in the VR chapel, they removed the DK1 \& walked the same path in the RW chapel. This behaviour alludes to how VR has previously been applied to cultural heritage sites such as St Salvator's chapel, wherein visitors would have the opportunity to experience a CAVE or stationary HMD based reconstruction of the site either before or after having explored the RW site. In the PR scenario participants wore the DK1, held the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& control box bundle in a satchel worn over a shoulder (see figures \ref{participant-f.png} \& \ref{participant-m.png}). They then walked the same path, but this time with the ability to transition at any time between viewing the RW chapel \& the VR chapel from the equivalent vantage point.
 
-In the PR scenario, participants had access to a single transition style, the transition with linear interpolation (see section \ref{transition-with-linear-interpolation}), triggered by pressing \& holding the \texttt{A} button on the Xbox controller. As mentioned in section \ref{initial-testing}, this transition emerged as the `favourite' during initial tests within the OVW group. As such, it was chosen as the only transition style for the PR scenario in this first stage of evaluation wherein the focus of the investigation was upon comparing the PR scenario to the traditional VR scenario experience \& not upon gleaning details of the merits \& drawbacks exhibited by different PR implementations. The default view on the DK1's screen was 100\% RW with the transition causing a change to 100\% VR, a situation visualised upon the combined model in figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}.
+In the PR scenario, participants had access to a single transition style, the transition with linear interpolation (see section \ref{transition-with-linear-interpolation}), triggered by pressing \& holding the \texttt{A} button on the Xbox controller. As mentioned in section \ref{initial-testing}, this transition emerged as the `favourite' during initial tests within the OVW group. As such, it was chosen as the only transition style for the PR scenario in this first stage of evaluation wherein the focus of the investigation was upon comparing the PR scenario to the traditional VR scenario experience \& not upon gleaning details of the merits \& drawbacks exhibited by different PR implementations. The default view on the DK1's screen was 100\% RW with the transition causing a change to 100\% VR, a situation visualised upon the combined Milgram/Waterworth model in figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}.
 
 Before taking part in the two scenarios, participants were given the opportunity to familiarise themselves with the DK1 by spending a few minutes interacting with Oculus' `Tuscany' demo\footnote{\url{https://share.oculus.com/app/oculus-tuscany-demo}}. This demo was developed by Oculus themselves \& is distributed with the Rift Unity integration package. It represented at the time a very polished \& stable DK1 experience, ideal for introducing inexperienced users to HMD based VR. It was thus used to give participants an opportunity to acclimatize to the Rift, in order to reduce skewing their subsequent experiences with the St Salvator's chapel model due to drastically different levels of familiarity with the DK1 between the two scenarios.
 
@@ -1390,5 +1390,11 @@ These evaluations have experimentally shown the value of the Mirrorshades platfo
 With the merit of the platform established by the stage 1 evaluation, this second stage of evaluation explored different implementation details of the platform to inform future implementation of similar systems such that the benefits of the concept can be best exploited. Stage 2.1 assessed participant responses to several different styles of performing transitions between the constituent RW \& VR environments, with a transition which furnished participants with complete control over the percentage of the visual stimuli of each environment that were presented to them emerging the clear favourite. The introduction of automatic transitions from RW to VR was met negatively when assessed in terms of enjoyment \& preference, but positively when assessed in terms of awareness \& understanding of the relationships between the two environments.
 
 Stage 2.2 further investigated the concept of presentation of VR visual stimuli to the user without their conscious invocation of a transition, the intention being to raise awareness \& understanding between the environments without introducing the negativity of the automatic transition, by replacing the 100\% RW default view of earlier stages with ones that presented a percentage of each environment at all times. The more extreme case of a 50/50 split led to the greater increase in spatial presence within the VR environment \& a barely perceptible decrease in experienced realism of the RW environment, however the 75/25 split that led to a less remarkable change was preferred by the participants.
+
+%=========================================================================================================
+
+\section{Best Practices for PR}
+
+\textbf{***Do this here, rather than in final chapter.}
 
 %=========================================================================================================
